﻿w17 12.03.2015 17:40:22 +0300 - build 4304

1. Уточнение 4302.

drkns 11.03.2015 20:07:31 +0200 - build 4303

1. Уточнение 4298.

w17 11.03.2015 15:50:45 +0300 - build 4302

1. Устранение запроса повышения привилегий при посмотре файла на флэшке с NTFS под Win Server 2008 R2 SP1

w17 11.03.2015 13:20:04 +0300 - build 4301

1. Уточнение 4279.

drkns 09.03.2015 23:54:31 +0200 - build 4300

1. Уточнение 4298.

zg 09.03.2015 20:27:35 +0200 - build 4299

1. опечатка в 4298.

drkns 09.03.2015 19:35:06 +0200 - build 4298

1. Рефакторинг.

shmuel 09.03.2015 19:09:39 +0200 - build 4297

1. M#2966: Неправильная вставка вертикального блока в конце файла.

drkns 09.03.2015 16:57:18 +0200 - build 4296

1. Уточнение 4294.

shmuel 09.03.2015 00:15:32 +0200 - build 4295

1. M#2965: При вставке вертикального блока усекаются последние символы в каждой строке.

drkns 08.03.2015 19:08:46 +0200 - build 4294

1. Рефакторинг.

drkns 08.03.2015 10:38:08 +0200 - build 4293

1. 0002963: Падение Фара при открытии файла в неверной кодировке

2. Пара "уточнений".

drkns 08.03.2015 03:59:24 +0200 - build 4292

1. В GCC некорректно (точнее, слишком корректно) работали fsf.sprintf/fsf.snprintf.

2. CoUninitialize вызывалась раньше чем нужно.

drkns 05.03.2015 23:52:10 +0200 - build 4291

1. Рефакторинг.

2. В одном из предыдущих билдов отвалился вызов CoInitializeEx.

zg 05.03.2015 12:02:34 +0200 - build 4290

1. всегда грузим плагины через LoadLibrary*, чтобы увеличить счётчик ссылок на длл.

zg 05.03.2015 05:31:29 +0200 - build 4289

1. уточнение 4248: во враппере оставим старое поведение DM_SETTEXT.

zg 05.03.2015 03:31:02 +0200 - build 4288

1. 0002959: FCTL_SETPANELDIRECTORY перерисовывает экран когда не надо.

drkns 04.03.2015 02:57:17 +0200 - build 4287

1. Уточнение 4280.2.

drkns 03.03.2015 22:47:29 +0200 - build 4286

1. 0002957: Undo отменяет добавленную строку, но после сохранения файла она остаётся

2. Раскрываем главное меню в том числе и по стрелке вверх.
